2008-04-08  Steffen Macke <sdteffen@sdteffen.de>

	* makefile.msc: Don't use the --use-fuzzy option with msgfmt,
	updated ALL_LINGUAS
	* installer/win32/dia.nsi: Updates for Dia, GTK+ and Installer
	locale files; Hungarian and Slovak translations are again available
	in the installer

2008-04-07  Steffen Macke <sdteffen@sdteffen.de>

	* installer/win32/dia.nsi: Various small updates; the sample files
	are now included in the installer build (fixes bug #518094)

2008-04-06  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/codegen.py : use a list for attributes rather than
	a dictionary to preserve the order of attributes. Fixes bug #519162

	* objects/UML/class.c : switching comment visibility via object menu 
	produced an invalid change object: bug #512848
	* lib/objchange.c(new_object_state_change): g_return_val_if_fail()
	on invalid arguments

	* objects/UML/class_dialog.c : a lot of stuff from the 'UML - Class'
	was not considered for undo

	* lib/newgroup.c : only avoid linking app/ for G_OS_WIN32 does _not_
	fix the crash from bug #505513

2008-04-05  Hans Breuer  <hans@breuer.org>

	* lib/widgets.c : setup pixbuf file formats filter for "Load Image"
	fixing bug #439847

	* objects/standard/image.c : not only check for a different filename
	but also for different modification time when setting changing 
	"Standard - Image". Fixes bug #439849

	* plug-ins/pixbuf/pixbuf.c : plug a memory leak

	* app/menus.c(ensure_menu_path) : allow plug-ins to create a menu 
	path again. Does not yet work fopr the integrated ui, see bug #526146
	(_ui_manager_connect_proxy) : resurrection of menuitem tooltips,
	especially for recent file menu. They were lost in trnaslation to
	the GtkAction framework: bug #340352
	
	* app/load_save.c : disable remaining g_access() for win32, otherwise we
	can not save to a preexisting file

	* app/app_procs.c(app_exit) : don't g_free() const strings, 
	dia_open_diagrams() returns a GList, not a GSList